// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Cover matches the snapshot 1`] = `
.c5 {
  width: 32px;
  height: 32px;
}

.c6 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c2 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  box-sizing: border-box;
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 .c4 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

@media screen and (min-width:40em) {
  .c3 {
    padding-bottom: 60px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
    width="100%"
  >
    <div
      className="sc-bdVaJa bBcFLq"
    >
      <div
        className="sc-bwzfXH eNmxcA"
      >
        <div
          className="sc-bdVaJa eydErb"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c4 c5"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-bdVaJa dVZOZN"
        >
          <div>
            <div
              className="sc-bwzfXH eNmxcA"
            >
              <div
                className="c6 sc-htpNat dszOpy"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="sc-bxivhb bUZGRr sc-htpNat deJBsu"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="sc-bxivhb bUZGRr sc-htpNat kUuHSn"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              Trevor Paglan
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-bdVaJa gdqIDJ"
      >
        <div
          className="sc-ifAKCX cFlEyZ sc-htpNat iwZBau"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video Cover matches the snapshot with edit props 1`] = `
.c5 {
  width: 32px;
  height: 32px;
}

.c6 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c2 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  box-sizing: border-box;
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 .c4 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

@media screen and (min-width:40em) {
  .c3 {
    padding-bottom: 60px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
    width="100%"
  >
    <div
      className="sc-bdVaJa bBcFLq"
    >
      <div
        className="sc-bwzfXH eNmxcA"
      >
        <div
          className="sc-bdVaJa eydErb"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c4 c5"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-bdVaJa dVZOZN"
        >
          <div>
            <div
              className="sc-bwzfXH eNmxcA"
            >
              <div
                className="c6 sc-htpNat dszOpy"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="sc-bxivhb bUZGRr sc-htpNat deJBsu"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="sc-bxivhb bUZGRr sc-htpNat kUuHSn"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              <div>
                Child 
                title
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-bdVaJa gdqIDJ"
      >
        <div
          className="sc-ifAKCX cFlEyZ sc-htpNat iwZBau"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
